<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">DemoApp</string>
    <string name="launcher_name">@string/app_name</string>
    <string name="activity_name">@string/launcher_name</string>
    <string name="pro_call_coast">User will be charged %1$s$ per minute \n once video call connects</string>
    <string name="low_credit_warninig">LOW CREDIT WARNING...</string>
    <string name="tip_sent">tips sent</string>
    <string name="tip_received">tips received</string>
    <string name="send_tip">SEND TIP</string>
    <string name="custom_tip">CUSTOM TIP</string>
    <string name="quick_tip">QUICK TIP</string>
    <string name="tip_ten">TIP $10</string>
    <string name="tip_twenty">TIP $20</string>
    <string name="tip_fourty">TIP $40</string>
    <string name="tip_sixty">TIP $60</string>
    <string name="you_must">You must first add additional credits</string>
    <string name="buy_ten_credit">Buy 10 credits for $10</string>
    <string name="buy_twenty_credit">Buy 20 credits for $20</string>
    <string name="buy_fourty_credit">Buy 40 credits for $40</string>
    <string name="buy_sixty_credit">Buy 60 credits for $60</string>
    <string name="wait_message">Please Wait</string>
    <string name="credits">CREDITS</string>
    <string name="tip_received_value">%1$s tips received</string>
    <string name="tip_sent_value">%1$s tips sent</string>
    <string name="call_connect_price">Once connected this video chat \n will be billed at %1$s$ per min.</string>
    <string name="credit_add_failure_message">An error occurred while adding credit, please try again</string>
    <string name="tip_send_failure_message">An error occurred while sending tip, please try again</string>
    <string name="connecting">Connecting...</string>
    <string name="receiverview">Receiver View</string>

</resources>
